examples/test/testpolicy16345.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16345
  namespace: namespace165
spec:
  podSelector:
    matchLabels:
      key29: value9
      key19: value46
      key27: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value15
          key30: value19
          key13: value46
      podSelector:
        matchLabels:
          key40: value31
